tests/functional/lang/parse-fail-unexpected-hpath.err.exp
error: syntax error, unexpected '~/…' path, expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.~/foo
             |   ^
            2|
